--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -3,9 +3,8 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  min-height: 100vh; /* Ensure the body takes at least the full viewport height */
-  font-family: "Poppins", sans-serif;
-  background: #121e27;
+  min-height: 100vh;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,91 +13,14 @@ body {
 h2 {
   font-weight: 400;
   font-size: 40px;
-  padding: 0px, 50px;
+  padding: 0px;
 }
 
 .container {
-  background-color: white;
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto; /* Center the container */
+  margin: 0 auto;
   padding: 0;
-}
-
-.mySkillsContainer {
-  display: grid;
-  grid-template-areas:
-    "title title"
-    "profile skills"
-    "profile bio";
-  grid-template-columns: 1fr 2fr;
-  background-color: white;
-}
-
-.mySkillsContainer h2 {
-  grid-area: title;
-  position: relative;
-  z-index: 1;
-}
-
-.skillsTitle {
-  margin: 30px 0px;
-}
-
-.profileAndSkills {
-  display: contents;
-}
-
-.profile {
-  grid-area: profile;
-  max-width: 600px;
-  padding: 0 60px;
-  border-radius: 30px;
-}
-
-.profile img {
-  border-radius: 30px;
-}
-
-.techskills {
-  grid-area: skills;
-}
-
-.techskills,
-.techskills ol {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5px;
-  padding: 0;
-  list-style-type: none;
-  row-gap: 0;
-}
-
-.techskills li {
-  background: #121e27;
-  padding: 5px 10px;
-  margin: 2px;
-  color: aliceblue;
-  height: 30px;
-  line-height: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.bio {
-  grid-area: bio;
-}
-
-.biolink {
-  font-weight: 900px !important;
-  font-size: 24px;
-  letter-spacing: 5px;
-  color: #008b7a !important;
-}
-
-.biotitle {
-  margin-bottom: 30px;
 }
 
 .img-responsive {
@@ -110,9 +32,8 @@ h2 {
 .mySkillsContainer,
 .projects,
 .contactContainer {
-  margin-bottom: 30px;
+  padding: 30px;
 }
-
 .contactContainer {
   display: flex;
   justify-content: center;
@@ -120,14 +41,14 @@ h2 {
   height: 100vh;
 }
 .titleh2 {
-  padding-left: 20px;
+  padding-left: 30px;
   position: relative;
   display: inline-block;
 }
 
 .titleh2 span {
   position: relative;
-  display: inline-block; /* Ensures the span's width matches its content */
+  display: inline-block;
 }
 .titleh2 span::before {
   content: "";
